--- a/client/sections/viewPanels.html
+++ b/client/sections/viewPanels.html
@@ -1,1 +1,2 @@
-    <table id="panelTable" class="display" style="width:100%"></table>
+<button id="addPanel" class="navButton" target="addPanel" style="width: 95%" onclick="showScreen('addPanel');">Add Panel</button>
+<table id="panelTable" class="display" style="width:100%"></table>
