--- a/client/sections/viewTrains.html
+++ b/client/sections/viewTrains.html
@@ -1,1 +1,2 @@
-    <table id="trainTable" class="display" style="width:100%"></table>
+<button id="addTrain" class="navButton" target="addTrain" style="width: 95%" onclick="showScreen('addTrain');">Add Train</button>
+<table id="trainTable" class="display" style="width:100%"></table>
