Updating accessories display

--- a/client/sections/viewTrains.html
+++ b/client/sections/viewTrains.html
@@ -1,2 +1,2 @@
-<button id="addTrain" class="navButton" target="addTrain" style="width: 95%" onclick="showScreen('addTrain');">Add Train</button>
+<button id="addTrain" class="navButton" target="addTrain" onclick="showScreen('addTrain');">Add Train</button>
 <table id="trainTable" class="display" style="width:100%"></table>
