--- a/client/sections/viewPanels.html
+++ b/client/sections/viewPanels.html
@@ -1,2 +1,2 @@
-<button id="addPanel" class="navButton" target="addPanel" style="width: 95%" onclick="showScreen('addPanel');">Add Panel</button>
+<button id="addPanel" class="navButton" target="addPanel" onclick="showScreen('addPanel');">Add Panel</button>
 <table id="panelTable" class="display" style="width:100%"></table>
