Adding new image search, a bit hard coded for now

--- a/client/sections/addTrain.html
+++ b/client/sections/addTrain.html
@@ -1,4 +1,12 @@
 <h1 id="addTrainTitle">Add Train</h1>
 <div id="trainRes" class="alert"></div>
+<!-- Add the necessary HTML for the modal -->
+<div id="imageSearchModal" class="imageSearchModal">
+    <div class="modal-content">
+      <span class="closeImageSelector">&times;</span>
+      <div id="loadingAnimation" style="display: none;">Loading...</div>
+      <div id="imageSearchResults"></div>
+    </div>
+  </div>
 <form id="addTrainForm" style="margin: 3em;">
 </form>
