--- a/client/sections/trainPanel.html
+++ b/client/sections/trainPanel.html
@@ -81,21 +81,46 @@
                 </button>
                 <button id="f2" class="function-button">
                     <img src="images/function-icons/Function.png" alt="Icon 3">
-                    <name>Function #3</name>
+                    <name>Function #2</name>
                 </button>
                 <button id="f3" class="function-button">
                     <img src="images/function-icons/Function.png" alt="Icon 4">
-                    <name>Function #4</name>
+                    <name>Function #3</name>
                 </button>
                 <button id="f4" class="function-button">
                     <img src="images/function-icons/Function.png" alt="Icon 3">
-                    <name>Function #3</name>
+                    <name>Function #4</name>
                 </button>
                 <button id="f5" class="function-button">
                     <img src="images/function-icons/Function.png" alt="Icon 4">
-                    <name>Function #4</name>
+                    <name>Function #5</name>
+                </button>
+                <button id="allFunctions" class="all-functions-button">
+                    <name>All functions</name>
                 </button>
             </panel>
+        </section>
+        <section class="all-functions">
+            <button id="f0" class="function-button">
+                <img src="images/function-icons/Directional_lights.png" alt="Icon 1">
+                <name>Directional lights</name>
+            </button>
+            <button id="f1" class="function-button">
+                <img src="images/function-icons/Interior_lights.png" alt="Icon 2">
+                <name>Interior lights</name>
+            </button>
+            <button id="f2" class="function-button">
+                <img src="images/function-icons/Function.png" alt="Icon 3">
+                <name>Function #2</name>
+            </button>
+            <button id="f3" class="function-button">
+                <img src="images/function-icons/Function.png" alt="Icon 4">
+                <name>Function #3</name>
+            </button>
+            <button id="f4" class="function-button">
+                <img src="images/function-icons/Function.png" alt="Icon 3">
+                <name>Function #4</name>
+            </button>
         </section>
     </div>
 </template>
