--- a/client/sections/viewFunctions.html
+++ b/client/sections/viewFunctions.html
@@ -1,2 +1,4 @@
-<button id="addFunction" class="navButton" target="addFunction" style="width: 95%" onclick="showScreen('addFunction');">Add Function</button>
+<nav class="inPanelNav">
+    <button id="addFunction" class="navButton" target="addFunction" style="width: 95%" onclick="showScreen('addFunction');">Add Function</button>
+</nav>
 <table id="functionTable" class="display" style="width:100%"></table>
