--- a/client/sections/viewPanels.html
+++ b/client/sections/viewPanels.html
@@ -1,2 +1,4 @@
-<button id="addPanel" class="navButton" target="addPanel" onclick="showScreen('addPanel');">Add Panel</button>
+<nav class="inPanelNav">
+    <button id="addPanel" class="navButton" target="addPanel" onclick="showScreen('addPanel');">Add Panel</button>
+</nav>
 <table id="panelTable" class="display" style="width:100%"></table>
