--- a/client/sections/viewTrains.html
+++ b/client/sections/viewTrains.html
@@ -1,2 +1,5 @@
-<button id="addTrain" class="navButton" target="addTrain" onclick="showScreen('addTrain');">Add Train</button>
+<nav class="inPanelNav">
+    <button id="addTrain" class="navButton" target="addTrain" onclick="setupaddTrain();showScreen('addTrain');">Add Train</button>
+    <button id="viewFunctions" class="navButton" target="viewFunctions" onclick="showScreen('viewFunctions');">Manage Functions</button>
+</nav>
 <table id="trainTable" class="display" style="width:100%"></table>
